--- a/sass/style.scss
+++ b/sass/style.scss
@@ -401,6 +401,123 @@ figure {
 	}
 }
 
+.fh5co-gallery {
+	position: relative;
+	margin-bottom: 7em;
+	float: left;
+	width: 100%;
+	.gallery-item {
+		width: 100%;
+		position: relative;
+		overflow: hidden;
+		display: block;
+		float: left;
+		z-index: 110;
+		img {
+			position: relative;
+			max-width: 100%;
+			-webkit-transform: scale(1.2);
+			-moz-transform: scale(1.2);
+			-ms-transform: scale(1.2);
+			-o-transform: scale(1.2);
+			transform: scale(1.2);
+			@include transition(.9s);
+		}
+		@media screen and (max-width: $screen-lg) {
+			width: 33.3333%;
+		}
+		@media screen and (max-width: $screen-sm) {
+			width: 50%;
+		}
+		@media screen and (max-width: $screen-xs) {
+			width: 100%;
+		}
+		.overlay {
+			position: absolute;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			top: 0;
+			z-index: 11;
+			vertical-align: middle;
+			padding-top: 30%;
+			visibility: hidden;
+			opacity: 0;
+			@include transition(.5s);
+			h2, span {
+				position: relative;
+				z-index: 12;
+				margin-bottom: 0;
+				text-align: center;
+				display: block;
+				@include transition(.3s);
+			}
+			h2 {
+				color: $brand-white;
+				font-size: 26px;
+				font-weight: 300;
+				margin-bottom: 10px;
+				bottom: -15px;
+				@media screen and (max-width: $screen-sm) {
+					font-size: 18px;
+				}
+			}
+			span {
+				color: $brand-primary;
+				color: rgba(255,255,255,.7);
+				font-size: 11px;
+				letter-spacing: 2px;
+				text-transform: uppercase;
+				font-weight: 400;
+				bottom: -5px;
+				visibility: hidden;
+				opacity: 0;
+			}
+			&:before {
+				content: '';
+				position: absolute;
+				z-index: 1;
+				top: 0;
+				left: 0;
+				bottom: 0;
+				right: 0;
+				background: rgba(0, 0, 0, .5);
+			}
+		}
+		&:hover {
+			img {
+				-webkit-transform: scale(1.0);
+				-moz-transform: scale(1.0);
+				-ms-transform: scale(1.0);
+				-o-transform: scale(1.0);
+				transform: scale(1.0);
+			}
+			.overlay {
+				visibility: visible;
+				opacity: 1;
+				&:before {
+					content: '';
+					position: absolute;
+					z-index: 1;
+					top: 0;
+					left: 0;
+					bottom: 0;
+					right: 0;
+					background: rgba(0, 0, 0, .5);
+				}
+				
+				h2 {
+					bottom: 0px;
+				}
+				span {
+					visibility: visible;
+					opacity: 1;
+					bottom: 0px;
+				}
+			}
+		}
+	}
+}
 
 // Chart
 
