--- a/sass/style.scss
+++ b/sass/style.scss
@@ -424,10 +424,10 @@ figure {
 			@include transition(.9s);
 		}
 		@media screen and (max-width: $screen-lg) {
-			width: 33.3333%;
+			width: 100%;
 		}
 		@media screen and (max-width: $screen-sm) {
-			width: 50%;
+			width: 100%;
 		}
 		@media screen and (max-width: $screen-xs) {
 			width: 100%;
@@ -515,6 +515,33 @@ figure {
 					bottom: 0px;
 				}
 			}
+		}
+	}
+	.fh5co-text {
+		float: right;
+		width: 100%;
+		@media screen and (max-width: $screen-sm) {
+			width: 100%;
+		}
+		@media screen and (max-width: $screen-xs) {
+			width: 100%;
+		}
+		h2, h3 {
+			margin: 0;
+			padding: 0;
+		}
+		h3 {
+			font-weight: 300;
+			margin-bottom: 10px;
+			color: rgba(255,255,255,.8);
+			font-size: 20px;
+		}
+		h2 {
+			font-size: 16px;
+			letter-spacing: 2px;
+			margin-top: 10px;
+			font-weight: bold;
+			text-transform: uppercase;
 		}
 	}
 }
