--- a/sass/style.scss
+++ b/sass/style.scss
@@ -593,6 +593,19 @@ figure {
 	}
 }
 
+.iframe-wrap {
+	position: relative;
+ 	width: 100%;
+    padding: 56.25% 0 0 0;
+    iframe {
+	    position: absolute;
+	 	top: 0;
+	 	left: 0;
+	    width: 100%;
+	    height: 100%;
+	}
+}
+
 // Helper Class
 .col-xxs-12 {
 	@media screen and (max-width: 480px) {
