--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,17 @@ figure {
         zoom: 1;
         *display: inline; } }
 
+.iframe-wrap {
+  position: relative;
+  width: 100%;
+  padding: 56.25% 0 0 0; }
+  .iframe-wrap iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
 @media screen and (max-width: 480px) {
   .col-xxs-12 {
     float: none;
