fix footer size

--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,11 @@ figure {
       .fh5co-social li a:hover, .fh5co-social li a:active, .fh5co-social li a:focus {
         outline: none;
         text-decoration: none; }
+  .fh5co-social h2 {
+    font-weight: 300;
+    margin-bottom: 0;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 20px; }
 
 .fh5co-feature {
   text-align: left;
