--- a/sass/style.scss
+++ b/sass/style.scss
@@ -356,6 +356,12 @@ figure {
 			}
 		}
 	}
+	h2 {
+		font-weight: 300;
+		margin-bottom: 0;
+		color: rgba(255,255,255,.8);
+		font-size: 20px;
+	}
 }
 
 
