--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 *
 * ======================================================= */
 body {
-  font-family: "Source Sans Pro", Arial, sans-serif;
+  font-family: "Source Sans Pro", "YuGothic", Arial, sans-serif;
   font-weight: 300;
   font-size: 20px;
   line-height: 1.5;
@@ -42,7 +42,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #fff;
-  font-family: "Source Sans Pro", Arial, sans-serif;
+  font-family: "Source Sans Pro", "YuGothic", Arial, sans-serif;
   font-weight: 400;
   margin: 0 0 30px 0; }
 
