--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-$font-primary: 'Source Sans Pro', Arial, sans-serif;
+$font-primary: 'Source Sans Pro', 'YuGothic', Arial, sans-serif;
 
 // Overrides
 $grid-gutter-width: 40px !default; 
