--- a/sass/style.scss
+++ b/sass/style.scss
@@ -561,6 +561,7 @@ figure {
   	position: relative;
   	text-align: center;
   	span {
+  		font-size: 18px;
   		strong {
   			display: block;
   		}
